--- a/vep/Dockerfile
+++ b/vep/Dockerfile
@@ -1,5 +1,5 @@
 From ubuntu
-MAINTAINER Dave Tang <dave.tang@telethonkids.org.au>
+MAINTAINER Dave Tang <me@davetang.org>
 RUN apt-get update
 
 RUN apt-get install -y wget unzip cpanminus libmysqlclient-dev build-essential curl git zlib1g-dev
@@ -7,6 +7,5 @@ RUN cpanm Archive::Extract Archive::Zip DBD::mysql
 
 RUN mkdir /src && cd /src && wget https://github.com/Ensembl/ensembl-tools/archive/release/82.zip && unzip 82.zip && cd ensembl-tools-release-82/scripts/variant_effect_predictor/ && perl ./INSTALL.pl -a alc -y GRCh37 -s homo_sapiens
 
-# shell form of CMD
 CMD echo Image for the Variant Effector Predictor tool
 
