Updated several Dockerfiles

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,4 +1,4 @@
-FROM rocker/rstudio:3.6.1
+FROM ubuntu:18.04
 
 MAINTAINER Dave Tang <me@davetang.org>
 
@@ -6,6 +6,8 @@ RUN apt-get clean all && \
 	apt-get update && \
 	apt-get upgrade -y && \
 	apt-get install -y \
+      build-essential \
+		git \
 		libhdf5-dev \
 		libcurl4-gnutls-dev \
 		libssl-dev \
@@ -15,9 +17,4 @@ RUN apt-get clean all && \
 	&& apt-get clean all && \
 	apt-get purge && \
 	rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-RUN Rscript -e "install.packages(c('rmarkdown', 'tidyverse', 'workflowr'));"
-
-COPY user-settings /home/rstudio/.rstudio/monitored/user-settings/user-settings
-COPY .Rprofile /home/rstudio/
 
