--- a/hla-la/Dockerfile
+++ b/hla-la/Dockerfile
@@ -6,15 +6,25 @@ RUN apt-get clean all && \
    apt-get update && \
    apt-get upgrade -y && \
    apt-get install -y \
+      autotools-dev \
       build-essential \
+      cmake \
+      g++ \
       git \
-      wget \
-      vim \
-      libhdf5-dev \
+      libbz2-dev \
+      libboost-all-dev \
       libcurl4-gnutls-dev \
+      libhdf5-dev \
+      libicu-dev \
+      libjsoncpp-dev \
+      libpng-dev \
       libssl-dev \
       libxml2-dev \
-      libpng-dev \
+      python-dev \
+      tree
+      unzip \
+      vim \
+      wget \
       zlib1g-dev \
    && apt-get clean all && \
    apt-get purge && \
