Requirement for latest git2r package

--- a/rstudio/Dockerfile
+++ b/rstudio/Dockerfile
@@ -16,6 +16,7 @@ RUN apt-get clean all && \
 		libbz2-dev \
 		liblzma-dev \
 		libglpk40 \
+		libgit2-28 \
 	&& apt-get clean all && \
 	apt-get purge && \
 	rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
