--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -18,6 +18,8 @@ RUN apt-get clean all && \
       libxml2-dev \
       libpng-dev \
       zlib1g-dev \
+      libbz2-dev \
+      liblzma-dev \
       libncurses-dev \
    && apt-get clean all && \
    apt-get purge && \
