--- a/r/Dockerfile
+++ b/r/Dockerfile
@@ -1,16 +1,39 @@
-From ubuntu
+FROM rocker/r-ver:4.1.0
+
 MAINTAINER Dave Tang <me@davetang.org>
 
-RUN apt-get update
-RUN apt-get install -y git unzip wget build-essential libcurl4-gnutls-dev libssl-dev libxml2-dev fort77 xorg-dev liblzma-dev libblas-dev gfortran gcc-multilib gobjc++ aptitude libbz2-dev libpcre3 libpcre3-dev openjdk-6-jdk
-RUN aptitude install -y libreadline-dev
+LABEL source="https://github.com/davetang/learning_docker/r"
 
-RUN mkdir /src && cd /src && wget https://cran.r-project.org/src/base/R-3/R-3.3.2.tar.gz && tar -xzf R-3.3.2.tar.gz && cd R-3.3.2 && ./configure && make && make install
-RUN R -e 'install.packages(c("devtools", "XML", "ontologyIndex", "dplyr", "ggplot2"), repos = "http://cran.us.r-project.org")'
-RUN R -e 'source("https://bioconductor.org/biocLite.R"); biocLite("Rgraphviz", ask=FALSE)'
-RUN R -e 'install.packages("ontologyPlot", repos = "http://cran.us.r-project.org")'
-RUN R -e 'library(devtools); options(unzip = "internal"); install_github("davetang/romim")'
-RUN cd /src && git clone https://github.com/davetang/human_phenotype_ontology.git
+RUN apt-get clean all && \
+   apt-get update && \
+   apt-get upgrade -y && \
+   apt-get install -y \
+      autoconf \
+      build-essential \
+      default-jre \
+      gettext \
+      git-core \
+      libhdf5-dev \
+      libcurl4-gnutls-dev \
+      libssl-dev \
+      libxml2-dev \
+      libpng-dev \
+      libbz2-dev \
+      liblzma-dev \
+      libncurses-dev \
+      ncurses-term \
+      time \
+      unzip \
+      vim \
+      wget \
+      zlib1g-dev \
+   && apt-get clean all && \
+   apt-get purge && \
+   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-CMD R --version
+RUN Rscript -e "install.packages(c('rmarkdown', 'tidyverse'));"
+
+WORKDIR /work
+
+CMD ["R", "--version"]
 
