--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -1,6 +1,7 @@
 name: Build and push test
 
 on:
+  workflow_dispatch:
   push:
     paths:
       - 'github_actions/Dockerfile'
@@ -13,6 +14,12 @@ jobs:
         name: Checkout
         uses: actions/checkout@v3
       -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: davetang/from_github
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       -
@@ -24,6 +31,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+      -
+        name: Testing
+        run: |
+          echo ${{ steps.meta.outputs.tags }}
+          echo ${{ steps.meta.outputs.labels }}
       -
         name: Build and push
         uses: docker/build-push-action@v3
