--- a/.github/workflows/build_rstudio.yml
+++ b/.github/workflows/build_rstudio.yml
@@ -7,6 +7,7 @@ on:
       - 'main'
     paths:
       - 'rstudio/Dockerfile'
+      - 'script/docker_build.sh'
       - '.github/workflows/build_rstudio.yml'
 
 jobs:
