Use entry point for new version

--- a/aspera_connect/Dockerfile
+++ b/aspera_connect/Dockerfile
@@ -12,19 +12,34 @@ RUN apt-get clean all && \
     apt-get purge && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN useradd --create-home --shell /bin/bash parasite && \
-    echo 'parasite:password' | chpasswd
+ARG user=parasite
+RUN useradd \
+    --create-home \
+    --home-dir /home/${user} \
+    --base-dir /home/${user} \
+    --shell /bin/bash ${user} && \
+    echo "${user}:password" | chpasswd && \
+    usermod -d /home/${user} ${user}
 
-ARG aspera_ver=4.2.5.306
-RUN su - parasite -c "cd /tmp && \
-    wget https://d3gcli72yxqn2z.cloudfront.net/downloads/connect/latest/bin/ibm-aspera-connect_${aspera_ver}_linux.tar.gz && \
-    tar -xzf ibm-aspera-connect_${aspera_ver}_linux.tar.gz && \
-    ./ibm-aspera-connect_${aspera_ver}_linux.sh && \
-    rm /tmp/ibm-aspera*"
+# get link to tarball from https://www.ibm.com/aspera/connect/
+ARG aspera_ver=4.2.6.393
+ARG tarball=ibm-aspera-connect_${aspera_ver}_linux_x86_64.tar.gz
+ARG script=ibm-aspera-connect_${aspera_ver}_linux_x86_64.sh
 
-ARG home=/home/parasite
-# manually copy files as they are missing from 4.2.5.306
-COPY --chown=parasite:parasite asperaweb_id_dsa.openssh ${home}
-COPY --chown=parasite:parasite asperaweb_id_dsa.openssh.pub ${home}
+USER ${user}
+RUN cd /tmp && \
+    wget --quiet https://d3gcli72yxqn2z.cloudfront.net/downloads/connect/latest/bin/${tarball} && \
+    tar -xzf ${tarball} && \
+    ./ibm-aspera-connect_4.2.6.393_linux_x86_64.sh && \
+    ./${script} && \
+    rm /tmp/${tarball} /tmp/${script}
+
+ARG home=/home/${user}
+# manually copy files as they are missing from the tarball
+COPY --chown=${user}:${user} asperaweb_id_dsa.openssh ${home}
+COPY --chown=${user}:${user} asperaweb_id_dsa.openssh.pub ${home}
 
 RUN echo "export PATH=$PATH:${home}/.aspera/connect/bin/" >> ${home}/.bashrc
+RUN chmod -R 777 ${home}
+WORKDIR ${home}
+ENTRYPOINT ["/home/parasite/.aspera/connect/bin/ascp", "-QT", "-l 300m", "-P33001", "-i", "/home/parasite/asperaweb_id_dsa.openssh"]
