Include libgsl-dev

--- a/rstudio/Dockerfile
+++ b/rstudio/Dockerfile
@@ -23,6 +23,7 @@ RUN apt-get clean all && \
 		liblzma-dev \
 		libglpk40 \
 		libgit2-dev \
+		libgsl-dev \
 		patch \
 	&& apt-get clean all && \
 	apt-get purge && \
